--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,7 +3,6 @@
     <%= link_to current_user.name, edit_user_path(current_user) %> 
   </div>
   <div class="create-room">
-    <%= link_to "チャットを作成する", new_room_path %>
   </div>
 </div>
 
@@ -11,13 +10,12 @@
   <% current_user.rooms.each do |room| %>
     <div class="room">
       <div class="room-name">
-      <%= link_to room.name, room_messages_path(room) %>
+      <%= link_to room.name,  item_room_messages_path(@room.id,@item.id) %>
       </div>
     </div>
   <% end %>
   <div class="room">
     <div class="room-name">
-      <a href="#">techroom2</a>
     </div>
   </div>
 </div>
