--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="right-header">
     <div class="header-button">
-    <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
+    <%#= link_to "チャットを終了する", item_room_path(@room.id), method: :delete %>
     </div>
   </div>
 </div>
@@ -15,7 +15,7 @@
   <%= render partial: 'message', collection: @messages %>
 </div>
 
-<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+<%= form_with model: [@room, @message,@item], url:item_room_messages_path, class: 'form', local: true do |f| %>
     <div class="form-input">
       <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
       <label class="form-image">
