--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,6 +1,7 @@
 <div class='chat-room-form'>
   <h1>新規チャットルーム</h1>
-  <%=form_with model: @room, local: true do |f|%>
+  <%= "#{@item.user.name}さんとのチャットルームを作成しますか？"%>
+  <%=form_with url:item_rooms_path, model: @room, local: true do |f|%>
     <div class='chat-room-form__field'>
       <div class='chat-room-form__field--left'>
         <%= f.label :チャットルーム名, class: 'chat-room-form__label'%>
@@ -13,22 +14,18 @@
     </div>
     <div class='chat-room-form__field'>
       <div class='chat-room-form__field--left'>
-        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>チャットメンバー</label>
+        <label class='chat-room-form__label' for='chat_room_チャットメンバー'></label>
       </div>
       <div class='chat-room-form__field--right'>
-        <select name="room[user_ids][]">
-          <option value="">チャットするユーザーを選択してください</option>
-          <% User.where.not(id: current_user.id).each do |user| %>
-            <option value=<%= user.id %>><%= user.name %></option>
-          <% end %>
-        </select>
         <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
+        <input name="room[user_ids][]" type="hidden" value=<%= @item.user.id%>>
       </div>
     </div>
     <div class='chat-room-form__field'>
       <div class='chat-room-form__field--left'></div>
       <div class='chat-room-form__field--right'>
-        <%= f.submit class: 'chat-room-form__action-btn'%>
+        <%= f.submit "はい", class: "chat-room-form__action-btn"%>
+        <%= f.submit "いいえ", class: "chat-room-form__action-btn"%>
       </div>
     </div>
   <% end %>
